Fixate styles possible to break inadvertently

--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,7 @@ body {
   width: 100%;
   max-width: 651px;
   height: 100%;
-  margin: auto;
+  margin: 0 auto;
 
   box-sizing: border-box;
 }
@@ -248,6 +248,7 @@ body {
   margin-bottom: 0;
   padding: 13px 15px 9px 16px;
 
+  text-align: left;
   background-color: #F1F3F5;
   border-radius: 5px;
 
